fix build image and run ssh and emulators